--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"clean": "gatsby clean"
 	},
 	"dependencies": {
+		"@kabartolo/gatsby-theme-chicago-docs-core": "^1.1.1",
 		"gatsby": "^2.23.1",
 		"gatsby-plugin-manifest": "^2.4.31",
 		"gatsby-plugin-offline": "^3.2.28",
-		"@kabartolo/gatsby-theme-chicago-docs-core": "^1.1.1"
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1"
 	}
 }
